@@ -70,8 +70,8 @@ module ActiveModel
       # validator's initializer as +options[:in]+ while other types including
       # regular expressions and strings are passed as +options[:with]+
       #
-      # Finally, the options +:if+, +:unless+, +:on+, +:allow_blank+ and +:allow_nil+ can be given
-      # to one specific validator, as a hash:
+      # Finally, the options +:if+, +:unless+, +:on+, +:allow_blank+, +:allow_nil+ and +:strict+ 
+      # can be given to one specific validator, as a hash:
       #
       #   validates :password, :presence => { :if => :password_required? }, :confirmation => true
       #
@@ -101,12 +101,24 @@ module ActiveModel
         end
       end
 
+      # This method is used to define validation that can not be corrected by end user
+      # and is considered exceptional. 
+      # So each validator defined with bang or <tt>:strict</tt> option set to <tt>true</tt>
+      # will always raise <tt>ActiveModel::InternalValidationFailed</tt> instead of adding error
+      # when validation fails
+      # See <tt>validates</tt> for more information about validation itself.
+      def validates!(*attributes)
+        options = attributes.extract_options!
+        options[:strict] = true
+        validates(*(attributes << options))
+      end
+
     protected
 
       # When creating custom validators, it might be useful to be able to specify
       # additional default keys. This can be done by overwriting this method.
       def _validates_default_keys
-        [ :if, :unless, :on, :allow_blank, :allow_nil ]
+        [ :if, :unless, :on, :allow_blank, :allow_nil , :strict]
       end
 
       def _parse_validates_options(options) #:nodoc:
